/*
 * MT4_ABBook_Plugin.cpp
 * Server-side C++ plugin for real-time scoring-based A/B-book routing
 * 
 * Hooks into MT4/MT5 server trade pipeline to route trades based on
 * external ML scoring service via TCP protobuf communication.
 */

#include <windows.h>
#include <winsock2.h>
#include <ws2tcpip.h>
#include <string>
#include <vector>
#include <map>
#include <unordered_map>
#include <thread>
#include <mutex>
#include <queue>
#include <fstream>
#include <chrono>
#include <ctime>
#include <iostream>
#include <sstream>
#include <atomic>

#pragma comment(lib, "ws2_32.lib")

// MT Server integration structures (placeholders - need actual SDK)
struct TradeRequest {
    int login;
    char symbol[16];
    int type;          // 0=buy, 1=sell
    double volume;
    double price;
    double sl;
    double tp;
    char comment[64];
    int64_t timestamp;
};

struct TradeResult {
    int routing;       // 0=A-book, 1=B-book
    int retcode;       // MT_RET_OK, etc.
    char reason[128];
};

struct CloseRequest {
    int login;
    int ticket;
    double volume;
    double price;
};

struct CloseResult {
    int retcode;
    char reason[128];
};

struct AccountInfo {
    int login;
    double balance;
    double equity;
    double margin;
    int open_positions;
    int total_trades;
    double win_ratio;
    double avg_holding_time;
};

// Return codes
#define MT_RET_OK           0
#define MT_RET_ERROR        1
#define MT_RET_TIMEOUT      2

// Routing decisions
#define ROUTE_A_BOOK        0
#define ROUTE_B_BOOK        1

// Plugin configuration
struct PluginConfig {
    char cvm_ip[64];
    int cvm_port;
    int connection_timeout;
    double fallback_score;
    bool force_a_book;
    bool force_b_book;
    bool use_tdna_scores;
    double thresholds[6];  // FXMajors, Crypto, Metals, Energy, Indices, Other
    char external_api_url[256];
    char api_key[128];
    bool enable_influx_logging;
    char influx_url[256];
    // Cache settings
    bool enable_cache;
    int cache_ttl;
    int max_cache_size;
};

// Protobuf structures (simplified for C++)
struct ScoringRequest {
    char user_id[32];
    
    // Numeric features
    float open_price;
    float sl;
    float tp;
    float deal_type;
    float lot_volume;
    float is_bonus;
    float turnover_usd;
    float opening_balance;
    float concurrent_positions;
    float sl_perc;
    float tp_perc;
    float has_sl;
    float has_tp;
    float profitable_ratio;
    float num_open_trades;
    float num_closed_trades;
    float age;
    float days_since_reg;
    float deposit_lifetime;
    float deposit_count;
    float withdraw_lifetime;
    float withdraw_count;
    float vip;
    float holding_time_sec;
    float sl_missing;
    float tp_missing;
    float lot_usd_value;
    float exposure_to_balance_ratio;
    float rapid_entry_exit;
    float abuse_risk_score;
    float trader_tenure_days;
    float deposit_to_withdraw_ratio;
    float education_known;
    float occupation_known;
    float lot_to_balance_ratio;
    float deposit_density;
    float withdrawal_density;
    float turnover_per_trade;
    
    // String features
    char symbol[16];
    char inst_group[32];
    char frequency[16];
    char trading_group[32];
    char licence[8];
    char platform[16];
    char level_of_education[32];
    char occupation[32];
    char source_of_wealth[32];
    char annual_disposable_income[32];
    char average_frequency_of_trades[32];
    char employment_status[32];
    char country_code[8];
    char utm_medium[32];
};

struct ScoringResponse {
    float score;
    char warnings[256];
};

struct ExternalClientData {
    float age;
    int days_since_reg;
    float deposit_lifetime;
    float deposit_count;
    float withdraw_lifetime;
    float withdraw_count;
    float vip;
    char level_of_education[32];
    char occupation[32];
    char source_of_wealth[32];
    char annual_disposable_income[32];
    char employment_status[32];
    char country_code[8];
    char utm_medium[32];
    // ... other external fields
};

// Score caching system for high-frequency trading
struct CachedScore {
    float score;
    std::chrono::steady_clock::time_point timestamp;
    std::string request_hash;
};

class ScoreCache {
private:
    std::unordered_map<std::string, CachedScore> cache;
    std::mutex cache_mutex;
    std::chrono::milliseconds ttl{300}; // 300ms TTL for high-frequency scenarios
    std::atomic<int> hit_count{0};
    std::atomic<int> miss_count{0};
    
public:
    bool GetCachedScore(const std::string& key, float& score) {
        std::lock_guard<std::mutex> lock(cache_mutex);
        auto it = cache.find(key);
        if (it != cache.end()) {
            auto age = std::chrono::steady_clock::now() - it->second.timestamp;
            if (age < ttl) {
                score = it->second.score;
                hit_count++;
                return true;
            }
            cache.erase(it); // Remove expired entry
        }
        miss_count++;
        return false;
    }
    
    void SetCachedScore(const std::string& key, float score) {
        std::lock_guard<std::mutex> lock(cache_mutex);
        cache[key] = {score, std::chrono::steady_clock::now(), key};
        
        // Cleanup old entries if cache gets too large
        if (cache.size() > 1000) {
            auto now = std::chrono::steady_clock::now();
            auto it = cache.begin();
            while (it != cache.end()) {
                if (now - it->second.timestamp > ttl) {
                    it = cache.erase(it);
                } else {
                    ++it;
                }
            }
        }
    }
    
    void SetTTL(int milliseconds) {
        ttl = std::chrono::milliseconds(milliseconds);
    }
    
    std::pair<int, int> GetStats() {
        return {hit_count.load(), miss_count.load()};
    }
};

// Global variables
static PluginConfig g_config;
static std::mutex g_config_mutex;
static std::map<int, int> g_position_routing; // ticket -> routing decision
static std::mutex g_position_mutex;
static ScoreCache g_score_cache; // Global score cache

// Logging system
class AsyncLogger {
private:
    std::queue<std::string> log_queue;
    std::mutex queue_mutex;
    std::thread writer_thread;
    std::ofstream log_file;
    bool running;
    
public:
    AsyncLogger(const char* filename) : running(true) {
        log_file.open(filename, std::ios::app);
        writer_thread = std::thread(&AsyncLogger::WriterLoop, this);
    }
    
    ~AsyncLogger() {
        running = false;
        if (writer_thread.joinable()) {
            writer_thread.join();
        }
        log_file.close();
    }
    
    void Log(const std::string& message) {
        std::lock_guard<std::mutex> lock(queue_mutex);
        
        // Add timestamp
        auto now = std::chrono::system_clock::now();
        auto time_t = std::chrono::system_clock::to_time_t(now);
        char timestamp[32];
        strftime(timestamp, sizeof(timestamp), "%Y-%m-%d %H:%M:%S", localtime(&time_t));
        
        log_queue.push(std::string(timestamp) + " - " + message);
    }
    
private:
    void WriterLoop() {
        while (running) {
            std::string message;
            {
                std::lock_guard<std::mutex> lock(queue_mutex);
                if (!log_queue.empty()) {
                    message = log_queue.front();
                    log_queue.pop();
                }
            }
            
            if (!message.empty()) {
                log_file << message << std::endl;
                log_file.flush();
            }
            
            std::this_thread::sleep_for(std::chrono::milliseconds(10));
        }
    }
};

static AsyncLogger* g_logger = nullptr;

// CVM Communication
class CVMClient {
private:
    SOCKET sock;
    char buffer[8192];
    
public:
    CVMClient() : sock(INVALID_SOCKET) {}
    
    ~CVMClient() {
        if (sock != INVALID_SOCKET) {
            closesocket(sock);
        }
    }
    
    bool Connect() {
        sock = socket(AF_INET, SOCK_STREAM, 0);
        if (sock == INVALID_SOCKET) {
            return false;
        }
        
        // Set timeout
        DWORD timeout = g_config.connection_timeout;
        setsockopt(sock, SOL_SOCKET, SO_RCVTIMEO, (char*)&timeout, sizeof(timeout));
        setsockopt(sock, SOL_SOCKET, SO_SNDTIMEO, (char*)&timeout, sizeof(timeout));
        
        sockaddr_in addr;
        addr.sin_family = AF_INET;
        addr.sin_port = htons(g_config.cvm_port);
        inet_pton(AF_INET, g_config.cvm_ip, &addr.sin_addr);
        
        return connect(sock, (sockaddr*)&addr, sizeof(addr)) == 0;
    }
    
    float GetScore(const ScoringRequest& request) {
        if (!Connect()) {
            g_logger->Log("ERROR: Failed to connect to CVM");
            return g_config.fallback_score;
        }
        
        // Serialize protobuf request (simplified JSON for now)
        std::string json_request = SerializeToJSON(request);
        
        // Send length-prefixed message
        uint32_t length = htonl(json_request.length());
        if (send(sock, (char*)&length, sizeof(length), 0) != sizeof(length)) {
            g_logger->Log("ERROR: Failed to send message length");
            return g_config.fallback_score;
        }
        
        if (send(sock, json_request.c_str(), json_request.length(), 0) != json_request.length()) {
            g_logger->Log("ERROR: Failed to send message body");
            return g_config.fallback_score;
        }
        
        // Receive response
        uint32_t response_length;
        if (recv(sock, (char*)&response_length, sizeof(response_length), 0) != sizeof(response_length)) {
            g_logger->Log("ERROR: Failed to receive response length");
            return g_config.fallback_score;
        }
        
        response_length = ntohl(response_length);
        if (response_length > sizeof(buffer)) {
            g_logger->Log("ERROR: Response too large");
            return g_config.fallback_score;
        }
        
        if (recv(sock, buffer, response_length, 0) != response_length) {
            g_logger->Log("ERROR: Failed to receive response body");
            return g_config.fallback_score;
        }
        
        buffer[response_length] = '\0';
        
        // Parse JSON response (simplified)
        ScoringResponse response;
        if (ParseJSONResponse(buffer, &response)) {
            return response.score;
        }
        
        return g_config.fallback_score;
    }
    
private:
    std::string SerializeToJSON(const ScoringRequest& req) {
        // Simplified JSON serialization - in production use protobuf
        std::string json = "{";
        json += "\"user_id\":\"" + std::string(req.user_id) + "\",";
        json += "\"open_price\":" + std::to_string(req.open_price) + ",";
        json += "\"sl\":" + std::to_string(req.sl) + ",";
        json += "\"tp\":" + std::to_string(req.tp) + ",";
        json += "\"deal_type\":" + std::to_string(req.deal_type) + ",";
        json += "\"lot_volume\":" + std::to_string(req.lot_volume) + ",";
        json += "\"opening_balance\":" + std::to_string(req.opening_balance) + ",";
        json += "\"concurrent_positions\":" + std::to_string(req.concurrent_positions) + ",";
        json += "\"has_sl\":" + std::to_string(req.has_sl) + ",";
        json += "\"has_tp\":" + std::to_string(req.has_tp) + ",";
        json += "\"symbol\":\"" + std::string(req.symbol) + "\",";
        json += "\"inst_group\":\"" + std::string(req.inst_group) + "\"";
        // Add all other 51 fields...
        json += "}";
        return json;
    }
    
    bool ParseJSONResponse(const char* json, ScoringResponse* response) {
        // Simplified JSON parsing - in production use proper JSON library
        const char* score_start = strstr(json, "\"score\":");
        if (score_start) {
            response->score = atof(score_start + 8);
            return true;
        }
        return false;
    }
};

// Configuration management
bool LoadConfiguration() {
    std::ifstream config_file("ABBook_Config.ini");
    if (!config_file.is_open()) {
        return false;
    }
    
    // Set default cache settings
    g_config.enable_cache = true;
    g_config.cache_ttl = 300;
    g_config.max_cache_size = 1000;
    
    std::string line;
    while (std::getline(config_file, line)) {
        if (line.find("CVM_IP=") == 0) {
            strcpy_s(g_config.cvm_ip, line.substr(7).c_str());
        } else if (line.find("CVM_Port=") == 0) {
            g_config.cvm_port = std::stoi(line.substr(9));
        } else if (line.find("ConnectionTimeout=") == 0) {
            g_config.connection_timeout = std::stoi(line.substr(18));
        } else if (line.find("FallbackScore=") == 0) {
            g_config.fallback_score = std::stod(line.substr(14));
        } else if (line.find("EnableCache=") == 0) {
            g_config.enable_cache = (line.substr(12) == "true");
        } else if (line.find("CacheTTL=") == 0) {
            g_config.cache_ttl = std::stoi(line.substr(9));
        } else if (line.find("MaxCacheSize=") == 0) {
            g_config.max_cache_size = std::stoi(line.substr(13));
        } else if (line.find("Threshold_FXMajors=") == 0) {
            g_config.thresholds[0] = std::stod(line.substr(19));
        } else if (line.find("Threshold_Crypto=") == 0) {
            g_config.thresholds[1] = std::stod(line.substr(17));
        }
        // Parse other configuration options...
    }
    
    // Configure cache with loaded settings
    g_score_cache.SetTTL(g_config.cache_ttl);
    
    return true;
}

// External API for client data
bool GetExternalClientData(int login, ExternalClientData* ext_data) {
    // HTTP API call to get missing client data
    // This would use WinHTTP or similar for HTTP requests
    
    // For now, return dummy data
    ext_data->age = 35.0f;
    ext_data->days_since_reg = 145.0f;
    ext_data->deposit_lifetime = 50000.0f;
    ext_data->vip = 0.0f;
    strcpy_s(ext_data->country_code, "GB");
    strcpy_s(ext_data->occupation, "engineer");
    
    return true;
}

// Instrument group classification
const char* GetInstrumentGroup(const char* symbol) {
    if (strstr(symbol, "EUR") || strstr(symbol, "GBP") || strstr(symbol, "USD") || 
        strstr(symbol, "JPY") || strstr(symbol, "CHF") || strstr(symbol, "AUD") || 
        strstr(symbol, "CAD") || strstr(symbol, "NZD")) {
        return "FXMajors";
    } else if (strstr(symbol, "BTC") || strstr(symbol, "ETH") || strstr(symbol, "LTC")) {
        return "Crypto";
    } else if (strstr(symbol, "GOLD") || strstr(symbol, "XAU") || strstr(symbol, "SILVER")) {
        return "Metals";
    } else if (strstr(symbol, "OIL") || strstr(symbol, "WTI") || strstr(symbol, "BRENT")) {
        return "Energy";
    } else if (strstr(symbol, "SPX") || strstr(symbol, "NDX") || strstr(symbol, "DAX")) {
        return "Indices";
    }
    return "Other";
}

double GetThresholdForGroup(const char* group) {
    if (strcmp(group, "FXMajors") == 0) return g_config.thresholds[0];
    if (strcmp(group, "Crypto") == 0) return g_config.thresholds[1];
    if (strcmp(group, "Metals") == 0) return g_config.thresholds[2];
    if (strcmp(group, "Energy") == 0) return g_config.thresholds[3];
    if (strcmp(group, "Indices") == 0) return g_config.thresholds[4];
    return g_config.thresholds[5]; // Other
}

// Build scoring request from trade data
void BuildScoringRequest(const TradeRequest* trade, const AccountInfo* account, 
                        const ExternalClientData* ext_data, ScoringRequest* request) {
    // Set user ID
    sprintf_s(request->user_id, "%d", trade->login);
    
    // Trade data
    request->open_price = (float)trade->price;
    request->sl = (float)trade->sl;
    request->tp = (float)trade->tp;
    request->deal_type = (float)trade->type;
    request->lot_volume = (float)trade->volume;
    strcpy_s(request->symbol, trade->symbol);
    
    // Account data
    request->opening_balance = (float)account->balance;
    request->concurrent_positions = (float)account->open_positions;
    request->num_open_trades = (float)account->open_positions;
    request->num_closed_trades = (float)account->total_trades;
    request->profitable_ratio = account->win_ratio;
    request->holding_time_sec = account->avg_holding_time;
    
    // Calculated fields
    request->has_sl = (trade->sl > 0) ? 1.0f : 0.0f;
    request->has_tp = (trade->tp > 0) ? 1.0f : 0.0f;
    request->sl_perc = (trade->sl > 0) ? fabs(trade->price - trade->sl) / trade->price : 0.0f;
    request->tp_perc = (trade->tp > 0) ? fabs(trade->tp - trade->price) / trade->price : 0.0f;
    request->sl_missing = (trade->sl > 0) ? 0.0f : 1.0f;
    request->tp_missing = (trade->tp > 0) ? 0.0f : 1.0f;
    request->turnover_usd = (float)(trade->volume * trade->price * 100000); // Assuming forex
    request->exposure_to_balance_ratio = request->turnover_usd / request->opening_balance;
    request->lot_to_balance_ratio = request->lot_volume / request->opening_balance;
    
    // External data
    request->age = ext_data->age;
    request->days_since_reg = (float)ext_data->days_since_reg;
    request->deposit_lifetime = ext_data->deposit_lifetime;
    request->deposit_count = ext_data->deposit_count;
    request->withdraw_lifetime = ext_data->withdraw_lifetime;
    request->withdraw_count = ext_data->withdraw_count;
    request->vip = ext_data->vip;
    strcpy_s(request->level_of_education, ext_data->level_of_education);
    strcpy_s(request->occupation, ext_data->occupation);
    strcpy_s(request->country_code, ext_data->country_code);
    
    // Classification
    strcpy_s(request->inst_group, GetInstrumentGroup(trade->symbol));
    strcpy_s(request->platform, "MT4");
    strcpy_s(request->licence, "CY");
    
    // Additional calculated fields would go here...
}

// Broker routing functions (to be implemented with actual broker API)
void RouteToABook(int login, int ticket, const char* reason) {
    // TODO: Implement actual broker API call for A-book routing
    g_logger->Log("ROUTE: A-BOOK - Login:" + std::to_string(login) + 
                  " Ticket:" + std::to_string(ticket) + " Reason:" + reason);
}

void RouteToBBook(int login, int ticket, const char* reason) {
    // TODO: Implement actual broker API call for B-book routing  
    g_logger->Log("ROUTE: B-BOOK - Login:" + std::to_string(login) + 
                  " Ticket:" + std::to_string(ticket) + " Reason:" + reason);
}

// Main trade processing function
int ProcessTradeRouting(const TradeRequest* trade, TradeResult* result) {
    try {
        // Check global overrides
        if (g_config.force_a_book) {
            RouteToABook(trade->login, 0, "FORCED_A_BOOK");
            result->routing = ROUTE_A_BOOK;
            strcpy_s(result->reason, "FORCED_A_BOOK");
            return MT_RET_OK;
        }
        
        if (g_config.force_b_book) {
            RouteToBBook(trade->login, 0, "FORCED_B_BOOK");
            result->routing = ROUTE_B_BOOK;
            strcpy_s(result->reason, "FORCED_B_BOOK");
            return MT_RET_OK;
        }
        
        // Get account info (placeholder - need actual MT server API)
        AccountInfo account;
        account.login = trade->login;
        account.balance = 10000.0; // Would get from MT server
        account.open_positions = 3;
        account.total_trades = 150;
        account.win_ratio = 0.65f;
        account.avg_holding_time = 3600.0f;
        
        // Get external client data
        ExternalClientData ext_data;
        GetExternalClientData(trade->login, &ext_data);
        
        // Build scoring request
        ScoringRequest scoring_req;
        BuildScoringRequest(trade, &account, &ext_data, &scoring_req);
        
        // Try to get cached score first (if caching is enabled)
        float score = g_config.fallback_score;
        
        if (g_config.enable_cache) {
            std::string cache_key = GenerateRequestHash(scoring_req);
            if (!g_score_cache.GetCachedScore(cache_key, score)) {
                // Cache miss - get score from CVM
                CVMClient cvm_client;
                score = cvm_client.GetScore(scoring_req);
                
                // Cache the result for future requests
                g_score_cache.SetCachedScore(cache_key, score);
            }
        } else {
            // Caching disabled - get score directly
            CVMClient cvm_client;
            score = cvm_client.GetScore(scoring_req);
        }
        
        // Get threshold
        const char* inst_group = GetInstrumentGroup(trade->symbol);
        double threshold = GetThresholdForGroup(inst_group);
        
        // Make routing decision
        if (score >= threshold) {
            RouteToBBook(trade->login, 0, "SCORE_ABOVE_THRESHOLD");
            result->routing = ROUTE_B_BOOK;
            strcpy_s(result->reason, "SCORE_ABOVE_THRESHOLD");
        } else {
            RouteToABook(trade->login, 0, "SCORE_BELOW_THRESHOLD");
            result->routing = ROUTE_A_BOOK;
            strcpy_s(result->reason, "SCORE_BELOW_THRESHOLD");
        }
        
        // Log decision
        g_logger->Log("DECISION: " + std::string(trade->symbol) + 
                      " Score:" + std::to_string(score) + 
                      " Threshold:" + std::to_string(threshold) + 
                      " Decision:" + (result->routing == ROUTE_A_BOOK ? "A-BOOK" : "B-BOOK"));
        
        return MT_RET_OK;
        
    } catch (const std::exception& e) {
        g_logger->Log("ERROR: " + std::string(e.what()));
        result->routing = ROUTE_A_BOOK; // Default to A-book on error
        strcpy_s(result->reason, "ERROR_FALLBACK");
        return MT_RET_ERROR;
    }
}

// Generate cache key from scoring request
std::string GenerateRequestHash(const ScoringRequest& req) {
    std::stringstream ss;
    ss << req.user_id << "|" << req.symbol << "|" << req.lot_volume 
       << "|" << static_cast<int>(req.open_price * 100000) // Price to 5 decimals
       << "|" << req.deal_type << "|" << static_cast<int>(req.opening_balance);
    return ss.str();
}

// Plugin entry points (need actual MT Server SDK for proper signatures)
extern "C" {
    
    // Main trade request handler
    __declspec(dllexport) int OnTradeRequest(TradeRequest* request, TradeResult* result, void* server_context) {
        return ProcessTradeRouting(request, result);
    }
    
    // Trade close handler (no scoring needed)
    __declspec(dllexport) int OnTradeClose(CloseRequest* request, CloseResult* result, void* server_context) {
        // Find original routing decision
        std::lock_guard<std::mutex> lock(g_position_mutex);
        auto it = g_position_routing.find(request->ticket);
        
        if (it != g_position_routing.end()) {
            // Close with same routing as opening
            int original_routing = it->second;
            if (original_routing == ROUTE_A_BOOK) {
                // Close A-book position
                g_logger->Log("CLOSE: A-BOOK - Ticket:" + std::to_string(request->ticket));
            } else {
                // Close B-book position
                g_logger->Log("CLOSE: B-BOOK - Ticket:" + std::to_string(request->ticket));
            }
            
            g_position_routing.erase(it);
        }
        
        result->retcode = MT_RET_OK;
        return MT_RET_OK;
    }
    
    // Configuration update handler
    __declspec(dllexport) void OnConfigUpdate(const char* config_path) {
        std::lock_guard<std::mutex> lock(g_config_mutex);
        LoadConfiguration();
        g_logger->Log("CONFIG: Configuration reloaded");
    }
    
    // Plugin initialization
    __declspec(dllexport) int PluginInit() {
        // Initialize Winsock
        WSADATA wsaData;
        if (WSAStartup(MAKEWORD(2, 2), &wsaData) != 0) {
            return MT_RET_ERROR;
        }
        
        // Initialize logger
        g_logger = new AsyncLogger("ABBook_Plugin.log");
        
        // Load configuration
        if (!LoadConfiguration()) {
            g_logger->Log("ERROR: Failed to load configuration");
            return MT_RET_ERROR;
        }
        
        g_logger->Log("INFO: Plugin initialized successfully");
        return MT_RET_OK;
    }
    
    // Plugin cleanup
    __declspec(dllexport) void PluginCleanup() {
        g_logger->Log("INFO: Plugin shutting down");
        
        delete g_logger;
        g_logger = nullptr;
        
        WSACleanup();
    }
}

// DLL entry point
BOOL APIENTRY DllMain(HMODULE hModule, DWORD ul_reason_for_call, LPVOID lpReserved) {
    switch (ul_reason_for_call) {
    case DLL_PROCESS_ATTACH:
        break;
    case DLL_THREAD_ATTACH:
        break;
    case DLL_THREAD_DETACH:
        break;
    case DLL_PROCESS_DETACH:
        break;
    }
    return TRUE;
} 